# raytracing-course

./: CMakeLists.txt  run.sh
src/lib/: renderer.hpp
src/lib/abstracts/: camera.cpp  camera.hpp  scene.cpp  scene.hpp  vframe.cpp  vframe.hpp
src/lib/math/: base.cpp  base.hpp  coord_system.hpp  distributions.cpp  distributions.hpp  global_random.cpp  global_random.hpp  ray.cpp  ray.hpp
src/lib/render/: base.cpp  base.hpp  canvas.cpp  canvas.hpp  elementary.cpp  elementary.hpp  intersection.hpp
src/lib/render/objects/: box.cpp  box.hpp  ellipsoid.cpp  ellipsoid.hpp  factory.cpp  factory.hpp  plane.cpp  plane.hpp
src/lib/utils/: readers.cpp  utils.hpp
